@@ -266,6 +266,7 @@ function themeblvd_epic_thumb() {
 
 					the_post();
 
+
 					if ( ! has_post_format('gallery') && themeblvd_get_att('thumbs') == 'fs' ) {
 					    $class[] = 'tb-parallax';
 					}
