@@ -31,5 +31,11 @@
         <custom-field action="translate">_tb_sidebars</custom-field>
         <custom-field action="translate">_tb_custom_layout</custom-field>
         <custom-field action="translate">_tb_builder_elements</custom-field>
+        <custom-field action="translate">_tb_builder_plugin_version_created</custom-field>
+        <custom-field action="translate">_tb_builder_plugin_version_saved</custom-field>
+        <custom-field action="translate">_tb_builder_framework_version_created</custom-field>
+        <custom-field action="translate">_tb_builder_framework_version_saved</custom-field>
+        <custom-field action="translate">_tb_builder_sections</custom-field>
+        <custom-field action="translate">_tb_builder_styles</custom-field>
     </custom-fields>
 </wpml-config>
