@@ -4,6 +4,8 @@ Jump Start Changelog
 2.1.4 - XX/XX/XXXX
 ------------------
 
+* Fixed: Polylang plugin errors when translating post.
+
 --------------------------------------------------------------
 
 2.1.3 - 11/10/2016
